fix type and update requirement

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,6 +33,17 @@
   --radius-lg: var(--radius);
   --radius-md: calc(var(--radius) - 2px);
   --radius-sm: calc(var(--radius) - 4px);
+
+  --animate-sweep: sweep 2s infinite linear;
+
+  @keyframes sweep {
+    from {
+      transform: translateX(-100%);
+    }
+    to {
+      transform: translateX(100%);
+    }
+  }
 }
 
 /*
