Update user profile button information

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,6 +44,8 @@
   --radius-lg: var(--radius);
   --radius-md: calc(var(--radius) - 2px);
   --radius-sm: calc(var(--radius) - 4px);
+
+  --text-xxs: calc(var(--text-xs) - 2px);
 }
 
 @layer utilities {
